# sm-engine

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  GenCompileCommandsJson.bat  LICENSE  MainWin32.cpp  README.md  Todo.txt  compile_commands.json  sm-engine.sln
Src/SM/: Assert.h  Bits.h  Containers.h  Engine.cpp  Engine.h  MainWin32.cpp  Math.cpp  Math.h  Memory.cpp  Memory.h  Platform.h  PlatformWin32.cpp  StandardTypes.h  Util.cpp  Util.h  VulkanFunctionsManifest.inl
Src/SM-Engine/Input/: Test2.cpp
Src/SM-Engine/Renderer/: Test.cpp
Src/SM/Renderer/: Camera.cpp  Camera.h  Color.cpp  Color.h  Renderer.cpp  Renderer.h  Shader.h  VulkanConfig.h  VulkanFunctions.h  VulkanFunctionsManifest.inl  VulkanRenderer.cpp  VulkanRenderer.h
raw_assets/shaders/: debug-draw.ps.hlsl  debug-draw.vs.hlsl  gizmo.ps.hlsl
sm-engine/: sm-engine.args.json  sm-engine.vcxproj  sm-engine.vcxproj.filters
sm-engine/Source/Engine/: Config.h  Config_old.h
sm-engine/Source/Engine/Core/: Assert.h  Assert_Old.cpp  Assert_old.h  BitFlags.h  Color.cpp  Color.h  Color_old.cpp  Color_old.h  Debug.cpp  Debug_Old.cpp  Debug_Old.h  File.cpp  File.h  File_old.cpp  Guid.h  Hash.cpp  Hash.h  Hash_old.cpp  Macros.cpp  Macros.h  Random.cpp  Random.h  Random_old.cpp  Random_old.h  Time.cpp  Time.h  Time_old.cpp  Types.h  Utils.h
sm-engine/Source/Engine/Input/: InputSystem.cpp  InputSystem.h
sm-engine/Source/Engine/Job/: JobSystem.cpp  JobSystem.h
sm-engine/Source/Engine/Math/: IVec2.cpp  IVec2.h  IVec2_old.cpp  Mat33.cpp  Mat33.h  Mat33_old.cpp  Mat33_old.h  Mat44.cpp  Mat44.h  Mat44_old.cpp  Mat44_old.h  MathUtils.cpp  MathUtils.h  Vec2.cpp  Vec2.h  Vec2_old.cpp  Vec2_old.h  Vec3.cpp  Vec3.h  Vec3_old.cpp  Vec3_old.h  Vec4.cpp  Vec4.h  Vec4_old.cpp  Vec4_old.h
sm-engine/Source/Engine/Platform/: WindowsInclude.h  WindowsUtils.h
sm-engine/Source/Engine/Render/: Camera.cpp  Camera.h  Camera_old.cpp  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  Mesh_old.cpp  Mesh_old.h  RenderSettings.cpp  RenderSettings.h  Renderer.cpp  Renderer.h  RendererOld.cpp  ShaderCompiler.cpp  ShaderCompiler.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  Window_old.cpp  Window_old.h
sm-engine/Source/Engine/Thread/: AtomicUtil.h  CriticalSection.cpp  CriticalSection.h  Event.cpp  Event.h  Thread.cpp  Thread.h  ThreadSafeQueue.h  Thread_old.cpp
sm-engine/src/sm/: app.cpp  config.h
sm-engine/src/sm/core/: array.h  assert.cpp  assert.h  bits.h  color.cpp  color.h  debug.h  hash.cpp  hash.h  helpers.h  primitive.cpp  primitive.h  random.cpp  random.h  static_array.h  string.cpp  string.h  time.h  types.h
sm-engine/src/sm/io/: device_input.cpp  device_input.h  file.h  input.cpp  input.h
sm-engine/src/sm/math/: helpers.cpp  helpers.h  ivec2.cpp  ivec2.h  mat33.cpp  mat33.h  mat44.cpp  mat44.h  primitives.cpp  primitives.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.h
sm-engine/src/sm/memory/: arena.cpp  arena.h
sm-engine/src/sm/platform/: platform_handle.h
sm-engine/src/sm/render/: camera.cpp  camera.h  mesh.cpp  mesh.h  mesh_data.cpp  mesh_data.h  shader_compiler.h  ui.cpp  ui.h  vk_functions.h  vk_functions_manifest.h  vk_functions_manifest.inl  vk_include.h  vk_renderer.cpp  vk_renderer.h  window.cpp  window.h
sm-engine/src/sm/thread/: thread.h
src/Engine/Core/: Assert.cpp  Clock.h  Common.h  Config.h  FileUtils.cpp  Types.h
src/Engine/Input/: InputSystem.cpp
src/Engine/Job/: Job.h  JobSystem.h
src/Engine/Math/: Mat33.cpp  Mat33.h  Mat44.h  MathUtils.cpp  Vec2.cpp  Vec3.cpp
src/Engine/Render/: RenderableMesh.h  Vertex.cpp  Vertex.h  Window.cpp
src/Engine/Render/Vulkan/: VulkanCommands.h  VulkanDevice.h  VulkanFunctions.cpp  VulkanInclude.h  VulkanInstance.h  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSurface.cpp  VulkanSurface.h  VulkanTexture.cpp  VulkanUtils.h
src/Engine/Thread/: AtomicUtil.h  ThreadSafeQueue.h
src/engine/core/: Assert.cpp  Assert.h  BitFlags.h  Clock.cpp  Clock.h  Common.cpp  Common.h  Config.h  Debug.cpp  Debug.h  FileUtils.cpp  FileUtils.h  StringUtils.h  Types.h  assert.cpp  assert.h  bit_flags.h  color.h  config.h  debug.cpp  debug.h  file.cpp  file.h  funcs.h  guid.h  hash.cpp  hash.h  macros.h  random.cpp  random.h  time.cpp  time.h  types.h
src/engine/input/: InputSystem.cpp  InputSystem.h  input.cpp  input.h
src/engine/job/: Job.cpp  Job.h  JobSystem.cpp  JobSystem.h  job_system.cpp  job_system.h
src/engine/math/: IntVec2.cpp  IntVec2.h  Mat33.cpp  Mat33.h  Mat44.cpp  Mat44.h  MathUtils.cpp  MathUtils.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  ivec2.h  mat33.h  mat44.h  math_utils.cpp  math_utils.h  vec2.h  vec3.h  vec4.h
src/engine/platform/: windows_include.h
src/engine/render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  RenderableMesh.cpp  RenderableMesh.h  Vertex.cpp  Vertex.h  Window.cpp  Window.h  camera.cpp  camera.h  mesh.cpp  mesh.h  vertex.cpp  vertex.h  window.cpp  window.h
src/engine/render/ui/: ui.cpp  ui.h  ui_debug_log.cpp  ui_debug_log.h
src/engine/render/vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommands.cpp  VulkanCommands.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFunctions.cpp  VulkanFunctions.h  VulkanFunctionsManifest.inl  VulkanInclude.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer2.cpp  VulkanRenderer2.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtils.cpp  VulkanUtils.h  vulkan_commands.cpp  vulkan_commands.h  (+17 more)
src/engine/thread/: AtomicInt.cpp  AtomicInt.h  AtomicUtil.h  CriticalSection.cpp  CriticalSection.h  Event.cpp  Event.h  Thread.cpp  Thread.h  ThreadSafeQueue.h  atomic_util.h  critical_section.cpp  crtical_section.h  event.cpp  event.h  thread.cpp  thread.h  thread_safe_queue.h
(+75 files in other folders)
