cmake_minimum_required(VERSION 3.26)

project(sm-engine)

add_library(sm-engine STATIC src/engine/core/assert.cpp
                             src/engine/core/assert.h
                             src/engine/core/bit_flags.h
                             src/engine/core/color.h
                             src/engine/core/config.h
                             src/engine/core/debug.cpp
                             src/engine/core/debug.h
                             src/engine/core/file.cpp
                             src/engine/core/file.h
                             src/engine/core/funcs.h
                             src/engine/core/guid.cpp
                             src/engine/core/guid.h
                             src/engine/core/hash.cpp
                             src/engine/core/hash.h
                             src/engine/core/macros.h
                             src/engine/core/random.cpp
                             src/engine/core/random.h
                             src/engine/core/time.cpp
                             src/engine/core/time.h
                             src/engine/core/types.h
                             src/engine/input/input.cpp
                             src/engine/input/input.h
                             src/engine/job/job_system.cpp
                             src/engine/job/job_system.h
                             src/engine/math/ivec2.h
                             src/engine/math/mat33.h
                             src/engine/math/mat44.h
                             src/engine/math/math_utils.cpp
                             src/engine/math/math_utils.h
                             src/engine/math/vec2.h
                             src/engine/math/vec3.h
                             src/engine/math/vec4.h
                             src/engine/platform/windows_include.h
                             src/engine/render/camera.cpp
                             src/engine/render/camera.h
                             src/engine/render/mesh.cpp
                             src/engine/render/mesh.h
                             src/engine/render/vertex.h
                             src/engine/render/vulkan/vulkan_commands.cpp
                             src/engine/render/vulkan/vulkan_commands.h
                             src/engine/render/vulkan/vulkan_formats.cpp
                             src/engine/render/vulkan/vulkan_formats.h
                             src/engine/render/vulkan/vulkan_functions.cpp
                             src/engine/render/vulkan/vulkan_functions.h
                             src/engine/render/vulkan/vulkan_functions_manifest.inl
                             src/engine/render/vulkan/vulkan_include.h
                             src/engine/render/vulkan/vulkan_renderer.cpp
                             src/engine/render/vulkan/vulkan_renderer.h
                             src/engine/render/vulkan/vulkan_resource_manager.cpp
                             src/engine/render/vulkan/vulkan_resource_manager.h
                             src/engine/render/vulkan/vulkan_resources.cpp
                             src/engine/render/vulkan/vulkan_resources.h
                             src/engine/render/vulkan/vulkan_resources.cpp
                             src/engine/render/vulkan/vulkan_resources.h
                             src/engine/render/vulkan/vulkan_startup.cpp
                             src/engine/render/vulkan/vulkan_startup.h
                             src/engine/render/vulkan/vulkan_types.h
                             src/engine/render/window.cpp
                             src/engine/render/window.h
                             src/engine/thread/atomic_util.h
                             src/engine/thread/critical_section.cpp
                             src/engine/thread/critical_section.h
                             src/engine/thread/event.cpp
                             src/engine/thread/event.h
                             src/engine/thread/thread.cpp
                             src/engine/thread/thread.h
                             src/engine/thread/thread_safe_queue.h
                             src/engine/thirdparty/imgui/imgui.cpp
                             src/engine/thirdparty/imgui/imgui.h
                             src/engine/thirdparty/imgui/imgui_demo.cpp
                             src/engine/thirdparty/imgui/imgui_draw.cpp
                             src/engine/thirdparty/imgui/imgui_internal.h
                             src/engine/thirdparty/imgui/imgui_tables.cpp
                             src/engine/thirdparty/imgui/imgui_widgets.cpp
                             src/engine/thirdparty/imgui/imstb_rectpack.h
                             src/engine/thirdparty/imgui/imstb_textedit.h
                             src/engine/thirdparty/imgui/imstb_truetype.h
                             src/engine/thirdparty/imgui/backends/imgui_impl_vulkan.cpp
                             src/engine/thirdparty/imgui/backends/imgui_impl_vulkan.h
                             src/engine/thirdparty/imgui/backends/imgui_impl_win32.cpp
                             src/engine/thirdparty/imgui/backends/imgui_impl_win32.h
                             )

target_include_directories(sm-engine PUBLIC src/)
# TODO(smerendino): Do we need to explicitly link the static lib?
target_link_libraries(sm-engine PRIVATE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lib/vulkan-1.lib>")
